# flask_project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  blog.db  config.py
blog/admin/: views.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/api/permissions/: user.py
blog/articles/: views.py
blog/auth/: view.py  views.py
blog/authors/: views.py
blog/forms/: article.py  tag.py  user.py
blog/models/: __init__.py  articles.py  authors.py  datebase.py  tags.py  tags_articles.py  users.py
blog/schemas/: article.py  tag.py  user.py
blog/tags/: views.py
blog/templates/: base.html  index.html  navbar.html
blog/templates/admin/: index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html  login_as.html  register.html
blog/templates/authors/: details.html  list.html
blog/templates/macro/: formhelpers.html
blog/templates/tags/: create.html  details.html  list.html
blog/templates/users/: details.html  list.html
blog/users/: views.py
migrations/versions/: 2885af57c600_.py  29a0cf685102_add_email_field_to_user_model.py  3116a983d319_create_user_model.py  52191d70e3c3_authors_model.py  7e55e0648a84_pass_first_and_last_in_user_model.py  7ea165988aa4_add_email_field_to_user_model.py  7ea165988aa4_add_email_to_user_model.py  8b37f263c26b_articles_model.py
