[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["tolik <9779930@mail.ru>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-login = "^0.6.2"
flask-sqlalchemy = "^2.5.1"
flask-migrate = "^4.0.4"
psycopg2-binary = "^2.9.6"
wtforms = "^3.0.1"
email-validator = "^2.0.0.post2"
flask-wtf = "^1.1.1"
flask-admin = "^1.6.1"
flask-combo-jsonapi = "1.0.6"
combojsonapi = "1.0.5"
apispec = "2.0.2"
pyyaml = "5.1.1"
SQLAlchemy = "1.4.46"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
