[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["tolik <9779930@mail.ru>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.4"
flask-login = "^0.6.2"
flask-sqlalchemy = "2.5.1"
flask-migrate = "^4.0.4"
psycopg2-binary = "^2.9.6"
wtforms = "^2.3.3"
email-validator = "^2.0.0.post2"
flask-wtf = "^1.1.1"
flask-admin = "^1.6.1"
flask-combo-jsonapi = "1.0.7"
combojsonapi = "1.1.1"
apispec = "4.7.1"
pyyaml = "5.4.1"
MarkupSafe = "2.0.1"
python-dotenv = "^1.0.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
